--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "image-classification/node_modules/.bin/vite",
-    "build": "image-classification/node_modules/.bin/vite build",
-    "preview": "image-classification/node_modules/.bin/vite preview"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@tensorflow/tfjs": "^4.17.0",
